--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@
 .section-hero .text .tittle-hero {
     margin-bottom: 1rem;
     text-align: center;
+    padding: 0;
 }
 
 .section-hero .text .tittle-hero span {
